ref dans shema model + getCustomerInfo
